Spell fix of release in deployment yaml files

--- a/deployment/appinfo.yaml
+++ b/deployment/appinfo.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: appinfo
   labels:
-    releaes: stable
+    release: stable
     app:  appinfo
 spec:
   replicas: 1
